# guise-session-client-c

./: .gitignore  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.c
src/include/guise-sessions-client/: address.h  client.h  unique_id.h  user_session.h  user_sessions.h
src/lib/: CMakeLists.txt  address.c  client.c  unique_id.c  user_session.c  user_sessions.c
